--- a/.github/workflows/graph-engine.yml
+++ b/.github/workflows/graph-engine.yml
@@ -49,7 +49,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: "{{defaultContext}}:engine"
+          context: "{{defaultContext}}:engine/graph-engine"
           file: "Graphengine.Dockerfile"
           # 是否 docker push
           push: true
